--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -24,3 +24,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: target/SWKOM_Project-0.0.1.jar
