--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
+
+spring.jpa.database-platform=org.hibernate.spatial.dialect.h2geodb.GeoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.use-new-id-generator-mappings=false
