--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
+spring.jpa.database-platform=org.hibernate.spatial.dialect.h2geodb.GeoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
 logging.level.root=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate.SQL=ERROR
