--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 server.error.include-message=always
 
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://${DB_URL}
