--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
+
+logging.level.root=ERROR
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.at.fhtw.swen3=DEBUG
+
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.name=application-debug.log
