--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>2.1.214</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -144,6 +145,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.orbisgis</groupId>
+            <artifactId>h2gis</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.curious-odd-man</groupId>
